syntax = "proto3";

package lightspeed.props;

import public "protocol/devices/actions.proto";

enum Permission {
  ReadOnly = 0;
  ReadWrite = 1;
  WriteOnly = 2;
}

message Property {
  string name = 1;
  string value = 2;
  string kind = 3;
  Permission permission = 4;
}

message SetPropertyRequest {
  string device_id = 1;
  string property_name = 2;
  string property_value = 3;
}

message SetPropertyResponse {
  lightspeed.devices.actions.DeviceActions status = 1;
}
