syntax = "proto3";

package lightspeed.request;


message GetDevicesRequest {}

message GetDeviceRequest {
  string device_id = 1;
}

message GetPropertiesRequest {
  string device_id = 1;
}

message GetPropertyRequest {
  string device_id = 1;
  string property_name = 2;
}

message SetPropertyRequest {
  string device_id = 1;
  string property_name = 2;
  string property_value = 3;
}

message PropertyRequest {
  oneof ask {
    GetPropertyRequest property = 1;
    GetPropertiesRequest properties = 2;
  }
}

message CcdExposureRequest {
  string id = 1;
  float lenght = 2;
}

message CcdExposureResponse {
  bytes data = 1;
}

message CcdAbortExposureRequest {
  string id = 1;
}

message CcdAbortExposureResponse {
  string status = 1;
}

message EfwCalibrationRequest {
  string id = 1;
}
